--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native-stack": "^7.3.26",
     "expo": "~54.0.7",
     "expo-asset": "^12.0.9",
+    "expo-image-picker": "~17.0.8",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -22,10 +23,12 @@
     "react-native": "0.81.4",
     "react-native-alert-notification": "^0.4.2",
     "react-native-country-codes-picker": "^2.3.5",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-native-floating-label-input": "^1.4.3",
     "react-native-reanimated": "^4.1.0",
     "react-native-safe-area-context": "^5.6.1",
     "react-native-screens": "^4.16.0",
+    "react-native-worklets": "^0.5.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
